--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,45 @@
 # Core Dependencies
-python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+python-dotenv==1.0.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
 
 # LangChain & LangGraph
-langchain==0.1.0
-langchain-openai==0.0.2
-langchain-community==0.0.10
-langgraph==0.0.20
+langchain==0.3.13
+langchain-openai==0.2.14
+langchain-community==0.3.13
+langgraph==0.2.58
 
 # Vector Store
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
+faiss-cpu==1.13.2
+sentence-transformers==3.3.1
 
 # Jira Integration
-jira==3.5.2
-atlassian-python-api==3.41.0
+jira==3.8.0
+atlassian-python-api==3.41.16
 
 # API
-fastapi==0.109.0
-uvicorn[standard]==0.25.0
-httpx==0.26.0
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+httpx==0.28.1
+
+# UI
+streamlit==1.41.1
 
 # Background Jobs
-apscheduler==3.10.4
+apscheduler==3.11.0
 
 # Utilities
-python-multipart==0.0.6
-aiofiles==23.2.1
-tenacity==8.2.3
+python-multipart==0.0.20
+aiofiles==24.1.0
+tenacity==9.0.0
 
 # Logging & Monitoring
-loguru==0.7.2
-prometheus-client==0.19.0
+loguru==0.7.3
+prometheus-client==0.21.1
 
 # Development
-pytest==7.4.4
-pytest-asyncio==0.23.3
-black==23.12.1
-ruff==0.1.11
+pytest==8.3.4
+pytest-asyncio==0.25.2
+black==24.10.0
+ruff==0.8.4
 
