--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ langgraph==0.2.58
 
 # Vector Store
 faiss-cpu==1.13.2
-sentence-transformers==3.3.1
+# sentence-transformers==3.3.1  # Replaced by OpenAI embeddings
 
 # Jira Integration
 jira==3.8.0
