--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ langchain==0.3.13
 langchain-openai==0.2.14
 langchain-community==0.3.13
 langgraph==0.2.58
+langsmith==0.1.147
 
 # Vector Store
 faiss-cpu==1.13.2
