--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Options: gpt-4-turbo-preview, gpt-4, gpt-3.5-turbo
 OPENAI_MODEL=gpt-4-turbo-preview
 
+# ChatGPT model for guardrail agent (validates requests)
+# Options: gpt-4o-mini, gpt-4o, gpt-4-turbo, gpt-3.5-turbo
+GUARDRAIL_MODEL=gpt-4o-mini
+
 # Embedding model for vector search
 # Options: text-embedding-3-small, text-embedding-3-large, text-embedding-ada-002
 EMBEDDING_MODEL=text-embedding-3-small
